--- a/groupMMKI/styles/style.css
+++ b/groupMMKI/styles/style.css
@@ -457,11 +457,16 @@ footer ul li a{
     }
 
     header{
-        width: 100%;
-        height: 100vh;
-        background: url(../images/pcHero.png) no-repeat right center/cover;
         position: relative;
-        padding-top: 4px;
+        background-image: url(../images/pcHero.png);
+        max-width: 1366px;
+        height: 100vh;
+    }
+    .headerContainer {
+        width: 100%;
+        border: 1px solid #FF0000;
+        border-bottom: none;
+        margin: 0 83px;
     }
     /* .hero {
         background-image: url(../images/PChero.png);
@@ -480,13 +485,6 @@ footer ul li a{
         top: 50%;
         margin-left: 140px;
     }
-    .headerContainer {
-        width: 100%;
-        border: 1px solid #FF0000;
-        border-bottom: none;
-        margin:0 83px;
-    }
-
     .upper {
         display: flex;
         width: 100%;
